feat: Remove deprecated methods and streamline JSONMessage class